fixed animation glitch on tech stack and fixed the visibility of menu icon

--- a/styles/index.css
+++ b/styles/index.css
@@ -336,6 +336,7 @@ footer {
   left: 5%;
   z-index: 1;
   display: none;
+  z-index: 5;
 }
 
 .menu img {
